package handler;

import utility.Player;

public class DrawState implements GameState{
    @Override
    public void nextMove(GameContext context, Player player, boolean hasWon) {

    }

    @Override
    public void printState() {

    }

    @Override
    public boolean isGameOver() {
        return false;
    }
}
