package strategy;

import utility.Board;
import utility.Position;

import java.util.Scanner;

public class HumanPlayerStrategy implements PlayerStrategy {
    private Scanner scanner;
    private String playerName;

    public HumanPlayerStrategy(String playerName) {
        this.playerName = playerName;
        this.scanner = new Scanner(System.in);
    }

    public String getPlayerName() {
        return playerName;
    }


    @Override
    public Position makeMove(Board board) {
        while(true){
            System.out.printf("%s, enter your move (row[0-2] and col[0-2): ", playerName);
            try{
                int row = scanner.nextInt();
                int col = scanner.nextInt();
                Position move = new Position(row, col);
                // move validation
                if(board.isValidMove(move)){
                    return move;
                }
                System.out.println("Invalid move. Try again");
            } catch (Exception e){
                System.out.println("Invalid input. Please enter row and column as numbers.");
                scanner.nextLine();
            }
        }
    }
}
