package utility;

public enum Symbol {
    X,
    O,
    EMPTY
}
